fix: debug horizontal scroll of mat-tab-group in waiter page
the horizontal scroll was caused by display:flex on the parent main.
moving space handling to inner containers solved the issue.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -36,12 +36,9 @@ mat-sidenav-content {
 main {
   margin-left: auto;
   margin-right: auto;
-  padding: 96px 32px 64px 32px;
   max-width: 992px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   min-height: calc(100vh - 64px);
+  padding: 0.1px;
 }
 
 footer {
